--- a/.gitignore
+++ b/.gitignore
@@ -122,7 +122,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+**/.env
 .venv
 env/
 venv/
@@ -159,6 +159,6 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-.idea/
-/shonkhipto-backend/.idea/
-/shonkhipto-frontend/.idea/
+
+# Ignore .idea directories in any directory
+**/.idea/
